tests/ui/map_missing_serialize.stderr
error[E0277]: the trait bound `CustomKeyType: serde::ser::Serialize` is not satisfied
  --> tests/ui/map_missing_serialize.rs:9:5
   |
9  |     #[dbstruct::dbstruct(db=sled)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `serde::ser::Serialize` is not implemented for `CustomKeyType`
   |
   = help: the following other types implement trait `serde::ser::Serialize`:
             &'a T
             &'a mut T
             ()
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
           and 126 others
note: required by a bound in `dbstruct::wrapper::Map`
  --> src/wrapper/map.rs
   |
   |     Key: Serialize,
   |          ^^^^^^^^^ required by this bound in `dbstruct::wrapper::Map`
   = note: this error originates in the attribute macro `dbstruct::dbstruct` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `CustomValType: serde::ser::Serialize` is not satisfied
  --> tests/ui/map_missing_serialize.rs:9:5
   |
9  |     #[dbstruct::dbstruct(db=sled)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `serde::ser::Serialize` is not implemented for `CustomValType`
   |
   = help: the following other types implement trait `serde::ser::Serialize`:
             &'a T
             &'a mut T
             ()
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
           and 126 others
note: required by a bound in `dbstruct::wrapper::Map`
  --> src/wrapper/map.rs
   |
   |     Value: Serialize + DeserializeOwned,
   |            ^^^^^^^^^ required by this bound in `dbstruct::wrapper::Map`
   = note: this error originates in the attribute macro `dbstruct::dbstruct` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `for<'de> CustomValType: serde::de::Deserialize<'de>` is not satisfied
  --> tests/ui/map_missing_serialize.rs:9:5
   |
9  |     #[dbstruct::dbstruct(db=sled)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `for<'de> serde::de::Deserialize<'de>` is not implemented for `CustomValType`
   |
   = help: the following other types implement trait `serde::de::Deserialize<'de>`:
             &'a Path
             &'a [u8]
             &'a str
             ()
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and 134 others
   = note: required because of the requirements on the impl of `serde::de::DeserializeOwned` for `CustomValType`
note: required by a bound in `dbstruct::wrapper::Map`
  --> src/wrapper/map.rs
   |
   |     Value: Serialize + DeserializeOwned,
   |                        ^^^^^^^^^^^^^^^^ required by this bound in `dbstruct::wrapper::Map`
   = note: this error originates in the attribute macro `dbstruct::dbstruct` (in Nightly builds, run with -Z macro-backtrace for more info)
